@@ -1,5 +1,12 @@
 -- Almost all changes listed herein are new as of 2016. --
 
+2016-07-23  Mats Lidell  <matsl@gnu.org>
+
+* Makefile (kotl/kotl-loaddefs.el): Add copyright notice for satisfying
+	elpa copyright check.
+  (kotl/kotl-loaddefs.el): 
+  hyperbole.el: Rename kotl autoloads file.
+
 2016-07-22  Bob Weiner  <rsw@gnu.org>
 
 * hui-menu.el (infodock-hyperbole-menu): Commented out InfoDock manual reference out until
